# School_Archive

./: .ccsproject  .clang-format  .gitattributes  .gitignore  .project  .travis.yml  Buttons_HAL.c  CMakeLists.txt  LED_HAL.h  Makefile  README.md  SWTimer_main.c  XGA_Graphics.qpf  XGA_Graphics.qsf  XGA_Graphics.v  adcsimple.c  atom.cpp  atom.hpp  atom_tests.cpp  clog2.v  cmdrom.v  command_line_arguments.hpp  compile.ps1  complex_widget.cpp  complex_widget.hpp  datarom.v  env_arithmetic.hpp  env_functional.hpp  env_helper.hpp  env_list.hpp  environment.cpp  environment.hpp  environment_tests.cpp  example3  expression.cpp  expression.hpp  expression_tests.cpp  expressions.htm  expressions.qpf  expressions.qws  (+92 more)
.launches/: BasicButtons-LEDs-HAL.launch  Buttons-LEDs-HAL.launch  FSM_example1.launch  HW4_P4_Starter.launch  Joystick_colorLED.launch  msp432-blink32.launch  msp432-booster-board-button-debounce-LN.launch  msp432-joystickxy-c-lcd.launch
DesignSimulate03/: DesignSimulate03.tex
DesignSimulate04/: DesignSimulate04.tex
DesignSimulate05/: DesignSimulate05.tex
DesignSimulate06/: DesignSimulate06.tex
DesignSimulate07/: DesignSimulate07.tex
DesignSimulate08/: DesignSimulate08.tex
DesignSimulate09/: DesignSimulate09.tex
DesignSimulate13/: DesignSimulate13.tex
DesignSimulate14/: DesignSimulate14.tex
DesignSimulate15/: DesignSimulate15.tex
DesignSimulate16/: DesignSimulate16.tex
DesignSimulate18/: DesignSimulate18.tex
DesignSimulate24/: DesignSimulate24.tex
DesignSimulate25/: DesignSimulate25.tex
DesignSimulate26/: DesignSimulate26.tex
ECE2500/Project01/src/: CMakeLists.txt  export_disasm.cpp  export_disasm.hpp  main.cpp  parse_obj.hpp
ECE2504/: .gitattributes
ECE2534/: .gitattributes  README.md
ECE2574/: .travis.yml
ECE3574_2018F/exercise08/: CMakeLists.txt
ECE3574_2018F/finalexam/problem2/: CMakeLists.txt  main.cpp
ECE3574_2018S/exercise08/: CMakeLists.txt
ENGL3764/: RFC0003.md
Exam02Problems/: Exam02Problems.tex
FinalProject/: FinalProject.tex
HW5_part1/: HW5_part1.c
HW5_part1_extracredit/: lambda.h
HW5_part2/: HW5_part2.c
Homework01/: Homework01.tex  Homework01.txt
Homework02/: Homework02.tex
Homework03/: Homework03.tex  solarized-light.sty
Homework04/: Homework04.tex
Homework05/: Homework05.tex
Homework06/: Homework06.tex
Homework07/: Homework07.tex
Homework09/: Homework09.tex
Homework10/: Homework10.tex
Homework12/: Homework12.tex
Lab1/: Makefile  lab1.cpp
Lab10/: Makefile  PLT.docx  plt2.plt  plt3.raw
Lab11/: Draft1.asc  Draft1.raw  Draft2.op.raw  Makefile  PreLab2.asc  PreLab2.raw  PreLab3-1.asc  PreLab3.plt  PreLab3.raw
Lab12/: Draft3.asc  Draft3.op.raw  Makefile  PL1.asc  PL1.raw  PL2.asc  PL2.raw
Lab13/: GTest.mk  Makefile
Lab2/: Makefile  lab2.cpp
Lab3/: Draft1.op.raw  Draft1.raw  Makefile  PL1.raw  PL2.asc  PL2.plt  PL2.raw  PL3.asc  PL4.asc  PL4.op.raw  PL5.plt  PL5.raw  PL6.asc  PL6.op.raw  PL6.plt  PL6.raw  PLT.docx  lab3.cpp  resistors.cpp  resistors.h
Lab4/: Makefile  calculate.cpp  calculate.h
Lab5/: Makefile  PreLab1.plt  PreLab1.raw  PreLab2.asc  PreLab2.op.raw  PreLab2.raw  PreLab3.asc  PreLab3.plt  PreLab3.raw  PreLab4.op.raw  PreLab4.plt  PreLab5.plt  PreLab5.raw  PreLab6.asc  compute.h  lab5.cpp
Lab6/: Makefile
Lab7/: Draft2.op.raw  Draft2.plt  Makefile  PLT.docx  Pre1.raw  Pre2.plt  Pre2.raw  Pre3.op.raw
Lab8/: Makefile  PreLab1.asc  PreLab1.plt  PreLab2.asc  PreLab2.raw  PreLab3.asc  PreLab4.asc  PreLab4.raw
Lab9/: Draft1.raw  Makefile  PL2.plt  PL3.asc  PL3.raw  PLT.docx
LabEC/: GTest.mk  Makefile
Notes/: Notes.tex
Project0/: Makefile
Project00/: DP0Implementation.qar
Project01A/: Project 1a Cover Sheet.docx
Project02/: DP2_Fall2017.qarlog  testbench.s
Project03/: DP3_Fall2017_abelj.qarlog  cache.out  seperatedinstructions
Project03A/: ECE3544project3a.qar  Project 3a Specification fall 2018 YG.docx
Project1/: Makefile  project1.h
Project2/: Makefile  countryInfo.cpp  countryInfo.h  grave  hist_rand.plt  project2.cpp
Project3/: GTest.mk  Makefile  PartA.mk  PartB.mk
Project4/: GTest.mk  Makefile  PartA.mk  PartB.mk  callgrind.out.3747  callgrind.out.4087  callgrind.out.4718  callgrind.out.5091  deque2.hpp
Project5/: GTest.mk  Makefile  log
XGA_Graphics/: Makefile  XGA_Graphics.asm.rpt  XGA_Graphics.done  XGA_Graphics.fit.rpt  XGA_Graphics.fit.summary  XGA_Graphics.flow.rpt  XGA_Graphics.jdi  XGA_Graphics.map.rpt  XGA_Graphics.map.summary  XGA_Graphics.qsf  XGA_Graphics.qws  XGA_Graphics.sta.rpt  XGA_Graphics.sta.summary  XGA_Graphics.v  altpll_75.spd  altpll_75.v  ball_gen.v  ball_render.v  stp1.stp  verilator.vlt  vga_driver.v
XGA_Text/: Makefile  XGA_Text.asm.rpt  XGA_Text.cdf  XGA_Text.done  XGA_Text.fit.rpt  XGA_Text.fit.summary  XGA_Text.flow.rpt  XGA_Text.jdi  XGA_Text.map.rpt  XGA_Text.map.summary  XGA_Text.merge.rpt  XGA_Text.merge.summary  XGA_Text.pin  XGA_Text.qpf  XGA_Text.qsf  XGA_Text.sdc  XGA_Text.sta.rpt  XGA_Text.sta.summary  XGA_Text.v  XGA_Text_assignment_defaults.qdf  compositer.v  const_funcs.h  stp1.stp
c/: dds.c
colors/: XGA.qpf  XGA.qsf  XGA.v  vga_driver.v
dataclk/: dataclktb.v
dataonly/: dataonly.v
documentation/: index.html
exercise04/: MyVector.tpp  test_myvector.cpp
exercise05/: wordcount.cpp
exercise09/: CMakeLists.txt  hello_label.cpp  hello_static.cpp  label_printer.h
exercise11/: CMakeLists.txt  complex_widget.hpp
exercise12/: widget_events.hpp
exercise13/: traffic_light.cpp
exercise19/: qt_shared_deque_2.cpp
exercise20/: write_file.cpp
exercise23/: test_vector.cpp
homework-7/: XGA_Graphics.asm.rpt  XGA_Graphics.cdf  XGA_Graphics.fit.rpt  XGA_Graphics.fit.summary  XGA_Graphics.qsf  XGA_Graphics.qws  XGA_Graphics.sta.rpt  XGA_Graphics.sta.summary  ballmover.v  ballpixel.v
homework3-example1/: .project  main.c
homework3-example2/: .project  main.c
homework3-example3/: main.c
homework3-example4/: .project  main.c
i2c/: bitxmit.h  compile.ps1
loopback/: bitxmit.v  compile.ps1  loopback.qpf  loopback.qsf  loopback.v
milestone1/: .gitattributes  instr_groups.txt  (+2 more)
(+3626 files in other folders)
